# SVGPatcher

./: .gitignore  Jenkinsfile  README.md  build.bat  build.sh  pyproject.toml
.devcontainer/: devcontainer.json
src/SVGPatcher/: __init__.py  parser.py  renderer.py  replacer.py  template.py  version.py
