[project]
name = "SVGPatcher"
version = "0.0.1"
description = "A Python library that takes in SVG templates and fills them with text and images and generates a png"
authors = [
    { name = "Fayad", email = "aalfayad@resoundant.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lxml>=4.6,<6",
    "resvg_py>=0.1"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent"
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/SVGPatcher"]

[tool.hatch.build.targets.wheel.force-include]
"src/SVGPatcher/build_info.json" = "SVGPatcher/build_info.json"

[tool.hatch.build.targets.sdist.force-include]
"src/SVGPatcher/build_info.json" = "src/SVGPatcher/build_info.json"

[project.urls]
Homepage = "https://github.com/Resoundant/SVGPatcher"
Issues = "https://github.com/Resoundant/SVGPatcher/issues"